tests/macros/input/plugin.stderr
error: option `plugin` does not exist for kind `input`
 --> $DIR/plugin.rs:2:43
  |
2 |     let q = discourse::questions![Input { plugin: todo!() }];
  |                                           ^^^^^^
