tests/macros/input/plugin.rs
fn main() {
    let q = discourse::questions![Input { plugin: todo!() }];
}
